--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fbeta-components",
-  "version": "4.0.8",
+  "version": "4.0.9",
   "description": "React components",
   "main": "components/index.cjs.js",
   "module": "components/index.esm.js",
-  "types": "components/types/index.d.ts",
+  "types": "components/types/components/index.d.ts",
 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
